--- a/css/custom.css
+++ b/css/custom.css
@@ -1022,3 +1022,17 @@ html .background-color-none {
 
 	}
 }
+
+.img-artistas{
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+
+.img-artistas:hover{
+	-webkit-filter: none; /* Safari 6.0 - 9.0 */
+  filter:none;
+}
+
+li{
+	color: transparent !important;
+}
