--- a/css/custom.css
+++ b/css/custom.css
@@ -1048,7 +1048,7 @@ li{
 @media screen and (min-width: 768px){
 	.banner-img{
 		background-image: url('../img/slides/slider_arg-b2s.jpg'); 
-		height: 600px; 
+		height: 590px; 
 		background-size: 100%; 
 		background-repeat: no-repeat;
 }
@@ -1065,7 +1065,24 @@ li{
 @media screen and (min-width: 768px){
 	.banner-img-col{
 		background-image: url('../img/slides/slider_col-b2s.jpg'); 
-		height: 600px; 
+		height: 590px; 
+		background-size: 100%; 
+		background-repeat: no-repeat;
+}
+}
+
+@media screen and (max-width: 768px){
+	.banner-img-br{
+		background-image: url('../img/slides/brasil-b2s.jpg'); 
+		height: 192px; 
+		background-size: 100%; 
+		background-repeat: no-repeat;
+}
+}
+@media screen and (min-width: 768px){
+	.banner-img-br{
+		background-image: url('../img/slides/brasil-b2s.jpg'); 
+		height: 590px; 
 		background-size: 100%; 
 		background-repeat: no-repeat;
 }
